--- a/index.html
+++ b/index.html
@@ -2,26 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title> Google Search Page </title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./img/HeadGoogle.png" type=image/x-icon>
 </head>
 <body>
-    <div id="">
-        <header>
-            Gmail
-            Imagenes
-            Google Apps
-            Cuenta de Google
+    <div id="dummieGoogle">
+        <header id="contenedorEncabezado">
+            <div class="barraEncabezado">
+                <div>
+                    <input type="submit" value="Gmail"> 
+                    <input type="submit" value="Imagenes"> 
+                </div>
+                <div>
+                    <div><a href=""><img class="imgIcono" src="" alt="Google Apps"></a></div>
+                    <div><a href=""><img class="imgIcono" src="" alt="Cuenta de Google"></a></div>                    
+                </div>                
+            </div>            
         </header>
         <div id="formularioBusqueda">
-            <form id="" class="" action="">
+            <form id="fBusqueda" class="fBusqueda" action="#">
+                <div class="contenedorFormulario">
                 <div class="contenedorBusqueda">
                     <div class="barraBusqueda">
                         <div class="iconoBusqueda">
                             <span> lupa </span>
                         </div>
                         <div class="inputBusqueda">
-                            <input type="text"> Buscar
+                            <input type="search" id="gSearch" name="gSearch"> 
+                            <input type="submit" value="Buscar"> 
                         </div>
                     </div>
                 </div>
@@ -32,6 +43,7 @@
                     <button class="suerte">
                         Voy a tener suerte
                     </button>
+                </div>
                 </div>
             </form>
         </div>
@@ -50,16 +62,16 @@
                 <div id="barraFooter">
                     <div class="">
                         <div class="pais"> <span id=""> Colombia </span></div>
-                        <span id="">
-                            <a href="">Privacidad</a>
-                            <a href="">Terminos</a>
-                            <a href="">Configuraciones</a>
+                        <span id="linkMas">
+                            <a href="#">Privacidad</a>
+                            <a href="#">Condiciones</a>
+                            <a href="#">Preferencias</a>
                         </span>
-                        <span id="">
-                            <a href="">Promoción</a>
-                            <a href="">Negocios</a>
-                            <a href="">Acerca de</a>
-                            <a href="">Como funcionan las busquedas</a>
+                        <span id="linkDescubre">
+                            <a href="#">Promoción</a>
+                            <a href="#">Negocios</a>
+                            <a href="#">Sobre Google</a>
+                            <a href="#">Como funciona las busqueda</a>
                         </span>
                     </div>                    
                 </div>
