--- a/index.html
+++ b/index.html
@@ -4,75 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title> Google Search Page </title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/main.css">        
     <link rel="shortcut icon" href="./img/HeadGoogle.png" type=image/x-icon>
 </head>
 <body>
     <div id="dummieGoogle">
+        <!-- Barra de Menu -->
         <header id="contenedorEncabezado">
             <div class="barraEncabezado">
-                <div>
+                <div class="acceder">
                     <input type="submit" value="Gmail"> 
                     <input type="submit" value="Imagenes"> 
+                    <!-- https://www.google.com.co/imghp?hl=es -->
                 </div>
-                <div>
-                    <div><a href=""><img class="imgIcono" src="" alt="Google Apps"></a></div>
-                    <div><a href=""><img class="imgIcono" src="" alt="Cuenta de Google"></a></div>                    
+                <div class="configuracion">
+                    <div><a href="https://about.google/intl/es-419/products/?tab=wh">
+                        <img class="imgIcono" src="" alt="Google Apps"></a></div>
+                    <div><a href="https://mail.google.com/mail/u/0/">
+                        <img class="imgIcono" src="" alt="Cuenta de Google"></a></div>                    
                 </div>                
             </div>            
         </header>
-        <div id="formularioBusqueda">
-            <form id="fBusqueda" class="fBusqueda" action="#">
-                <div class="contenedorFormulario">
-                <div class="contenedorBusqueda">
-                    <div class="barraBusqueda">
-                        <div class="iconoBusqueda">
-                            <span> lupa </span>
-                        </div>
-                        <div class="inputBusqueda">
-                            <input type="search" id="gSearch" name="gSearch"> 
-                            <input type="submit" value="Buscar"> 
-                        </div>
-                    </div>
-                </div>
-                <div class="contenedorBotones">
-                    <button class="buscarGoogle">
-                        Buscar en Google
-                    </button>
-                    <button class="suerte">
-                        Voy a tener suerte
-                    </button>
-                </div>
-                </div>
-            </form>
-        </div>
+        <!-- Logo Google -->
         <div id="principal" class="contenido">
             <span id="">
                 <div>
-                    <img src="/img/google.webp" alt="Google" width="272px" height="92px">
+                    <img src="./img/google.webp" alt="Google" width="272px" height="92px">
                 </div>
                 <div style="height:150px">
 
                 </div>
             </span>
         </div>
+        <!-- Barra de busquedas -->
+        <div id="formularioBusqueda">
+            <form id="fBusqueda" class="fBusqueda" action="#" method="GET">
+                <div class="contenedorFormulario">
+                    <div class="contenedorBusqueda">
+                        <div class="barraBusqueda">
+                            <div class="iconoBusqueda">
+                                <span> <img src="./img/lupa.webp" alt="" width="20px" height="30px"> </span>
+                            </div>
+                            <div class="inputBusqueda">
+                                <input type="search" id="gSearch" name="gSearch">  
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Botones busqueda -->
+                    <div class="contenedorBotones">
+                        <button class="btnGoogle">
+                            Buscar en Google
+                        </button>
+                        <button class="btnGoogle">
+                            Voy a tener suerte
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <!-- Footer Links a contenidos-->
         <footer id="footer">
             <div id="contenedorFooter">
                 <div id="barraFooter">
                     <div class="">
-                        <div class="pais"> <span id=""> Colombia </span></div>
-                        <span id="linkMas">
-                            <a href="#">Privacidad</a>
-                            <a href="#">Condiciones</a>
-                            <a href="#">Preferencias</a>
-                        </span>
+                        <div class="pais"> <span id=""> Colombia </span></div>                        
+                        <div class="visitar">
                         <span id="linkDescubre">
-                            <a href="#">Promoción</a>
-                            <a href="#">Negocios</a>
-                            <a href="#">Sobre Google</a>
-                            <a href="#">Como funciona las busqueda</a>
+                            <a class=".aLink" href="https://ads.google.com/">Publicidad</a>
+                            <a class=".aLink" href="https://smallbusiness.withgoogle.com/">Negocios</a>
+                            <a class=".aLink" href="https://about.google/">Sobre Google</a>
+                            <a class=".aLink" href="https://www.google.com/search/howsearchworks/">Como funciona las busqueda</a>
                         </span>
+                        <span id="linkMas">
+                            <a class=".aLink" href="https://policies.google.com/privacy?fg=1">Privacidad</a>
+                            <a class=".aLink" href="https://policies.google.com/terms?fg=1">Condiciones</a>
+                            <a class=".aLink" href="https://www.google.com/preferences?hl=es-419">Preferencias</a>
+                        </span>
+                        </div>
                     </div>                    
                 </div>
             </div>
