--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
         <!-- Barra de Menu -->
         <header id="contenedorEncabezado">
             <div class="barraEncabezado">
-                <div class="acceder">
-                    <input type="submit" value="Gmail"> 
-                    <input type="submit" value="Imagenes"> 
-                    <!-- https://www.google.com.co/imghp?hl=es -->
+                <div class="acceso">
+                    <div><a href="https://mail.google.com/mail/u/0/"> Gmail </a></div>
+                    <div><a href="https://www.google.com.co/imghp?hl=es"> Imágenes </a></div>                    
                 </div>
                 <div class="configuracion">
                     <div><a href="https://about.google/intl/es-419/products/?tab=wh">
-                        <img class="imgIcono" src="" alt="Google Apps"></a></div>
-                    <div><a href="https://mail.google.com/mail/u/0/">
-                        <img class="imgIcono" src="" alt="Cuenta de Google"></a></div>                    
+                        <img class="imgIcono" src="./img/Herramientas.png" alt="Google Apps"></a></div>
+                    <div><a href="https://accounts.google.com/">
+                        <img class="imgIcono" src="./img/User.png" alt="Cuenta de Google"></a></div>                    
                 </div>                
             </div>            
         </header>
@@ -43,7 +42,7 @@
                     <div class="contenedorBusqueda">
                         <div class="barraBusqueda">
                             <div class="iconoBusqueda">
-                                <span> <img src="./img/lupa.webp" alt="" width="20px" height="30px"> </span>
+                                <span> <img src="./img/lupa.webp" alt="" width="20px" height="25px"> </span>
                             </div>
                             <div class="inputBusqueda">
                                 <input type="search" id="gSearch" name="gSearch">  
